--- a/components/Cards/Cards.less
+++ b/components/Cards/Cards.less
@@ -1,3 +1,5 @@
+
+
 .cards-container {
   .flex(space-evenly);
   .width-100();
@@ -6,6 +8,7 @@
   @media(min-width: 1200px){
     width: 1200px;
   }
+
   .card {
     .border-bottom-grey();
     .flex(space-between, none, column);
@@ -13,6 +16,7 @@
     width: 380px;
     margin-bottom: 16px;
     padding: 24px;
+    display: none;
     .headline {
       font-size: 25px;
       font-family: Didot, serif;
